<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.padelconnect.view.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.padelconnect.view.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.padelconnect.view.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.padelconnect.view.LoginFragment"
        android:label="LoginFragment"
        tools:layout="@layout/login"/>

    <fragment
        android:id="@+id/matchesListFragment"
        android:name="com.example.padelconnect.view.MatchesFragment"
        android:label="MatchesListFragment"
        tools:layout="@layout/fragment_matches_list"/>

    <fragment
        android:id="@+id/registerFragment"
        android:name="com.example.padelconnect.view.RegisterFragment"
        android:label="RegisterFragment"
        tools:layout="@layout/fragment_register"/>


    <!-- Definir la acción para navegar de loginFragment a matchesListFragment -->
    <action
        android:id="@+id/action_loginFragment_to_matchesListFragment"
        app:destination="@id/matchesListFragment" />

    <!-- Definir la acción para navegar de registerFragment a matchesListFragment -->
    <action
        android:id="@+id/action_registerFragment_to_matchesListFragment"
        app:destination="@id/matchesListFragment" />

    <!-- Definir la acción para navegar de loginFragment a registerFragment -->
    <action
        android:id="@+id/action_loginFragment_to_registerFragment"
        app:destination="@id/registerFragment" />
</navigation>